--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </nav>
 
     <main id="blog-container" class="object-width">
-      <div class="blog-card">
+      
+      <!-- <div class="blog-card">
         <img src="https://placehold.co/600x400" />
         <h2>This is a title</h2>
         <p>
@@ -61,7 +62,8 @@
           voluptas, ex recusandae debitis commodi obcaecati, tenetur qui
           architecto odio sint.
         </p>
-      </div>
+      </div> -->
+      
     </main>
 
     <script src="News.js"></script>
